feat(theme): Remember user theme choice