@@ -9,23 +9,19 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.release>11</maven.compiler.release>
-        <project.mainClass>TodoListApp/edu.ntnu.idatt1002.k2g10.todolistapp.App</project.mainClass>
+        <project.main>edu.ntnu.idatt1002.k2g10.todolistapp.App</project.main>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <javafx.version>15.0.1</javafx.version>
+        <project.java.version>11</project.java.version>
+        <project.javafx.version>15.0.1</project.javafx.version>
+        <project.hibernate.version>5.4.21.Final</project.hibernate.version>
     </properties>
 
     <dependencies>
         <!-- JavaFX - GUI - Documentation: https://openjfx.io/javadoc/11/index.html -->
         <dependency>
             <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>${javafx.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>${javafx.version}</version>
+            <version>${project.javafx.version}</version>
         </dependency>
 
         <!-- JavaFX Material Design - GUI - Documentation: http://www.jfoenix.com/documentation.html -->
@@ -35,22 +31,28 @@
             <version>9.0.10</version>
         </dependency>
 
-        <!-- Hibernate - DB - Documentation: https://hibernate.org/orm/documentation/5.4/ -->
+        <!-- SQL connector - DB -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.21</version>
         </dependency>
+
+        <!-- Derby - DB - Documentation: https://db.apache.org/derby/manuals/index.html -->
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
             <version>10.15.2.0</version>
         </dependency>
+
+        <!-- Hibernate - DB - Documentation: https://hibernate.org/orm/documentation/5.4/ -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>5.4.21.Final</version>
+            <version>${project.hibernate.version}</version>
         </dependency>
+
+        <!-- Javax Validation - DB -->
         <dependency>
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
@@ -58,12 +60,6 @@
         </dependency>
 
         <!-- JUnit - Testing - Documentation: https://junit.org/junit5/docs/current/user-guide/ -->
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>5.7.0</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
@@ -74,31 +70,44 @@
 
     <build>
         <plugins>
+            <!-- Maven Surefire - Build -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M3</version>
             </plugin>
+
+            <!-- Maven Compiler - Build -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>${maven.compiler.release}</release>
+                    <release>${project.java.version}</release>
                 </configuration>
             </plugin>
 
-            <!-- JavaFX - GUI - Documentation: https://openjfx.io/javadoc/11/index.html -->
+            <!-- Maven JavaFX - GUI -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.5</version>
                 <configuration>
-                    <release>${maven.compiler.release}</release>
-                    <mainClass>${project.mainClass}</mainClass>
-                    <jlinkImageName>TodoListApp</jlinkImageName>
-                    <launcher>launcher</launcher>
-                    <options>--add-opens java.base/java.lang.reflect=com.jfoenix</options>
+                    <release>${project.java.version}</release>
+                    <mainClass>${project.main}</mainClass>
+                </configuration>
+            </plugin>
+
+            <!-- Maven Javadoc - Documentation -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <source>${project.java.version}</source>
+                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+                    <reportOutputDirectory>public/javadoc</reportOutputDirectory>
+                    <destDir>/</destDir>
                 </configuration>
             </plugin>
 
@@ -107,18 +116,6 @@
                 <groupId>net.revelc.code.formatter</groupId>
                 <artifactId>formatter-maven-plugin</artifactId>
                 <version>2.14.0</version>
-            </plugin>
-
-            <!-- Javadoc - Documentation -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.2.0</version>
-                <configuration>
-                    <source>11</source>
-                    <reportOutputDirectory>public/javadoc</reportOutputDirectory>
-                    <destDir>/</destDir>
-                </configuration>
             </plugin>
         </plugins>
     </build>
